[package]
name = "passrust"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
eframe = { version = "0.21.3", features = ["dark-light", "serde", "persistence"] }
sha2 = "0.10.6"

#[lib]
#name = "main"
#crate_type = ["dylib"]
